<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="pleaseEnter">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="qs">What country does this flag belong to?</string>
    <string name="progressTv">1/10</string>
    <string name="india">India</string>
    <string name="argentina">Argentina</string>
    <string name="brazil">Brazil</string>
    <string name="africa">Africa</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="congrats">Hey Congratulations!</string>
    <string name="modak">Modak</string>
    <string name="score">Your Score is 0 out of 10</string>
    <string name="finish">FINISH</string>
</resources>