<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultScreen"
    android:background="@drawable/img_1"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="#fff"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="22dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/trophy" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:textColor="#FAF9FB"
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/nameNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modak"
            android:textColor="#FFFAFA"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="35dp"/>
        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/score"
            android:textColor="#FCFCFC"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="35dp"
            />

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="10dp"
            android:backgroundTint="#fff"
            android:layout_marginTop="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="60dp"/>


    </LinearLayout>
</LinearLayout>