<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/qs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/qs"
            android:textColor="#BC000000"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/flagImg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            tools:src="@drawable/ic_india" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="1" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp"
                tools:text="@string/progressTv" />
        </LinearLayout>

        <TextView
            android:id="@+id/optionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/default_text_view_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/india"
            android:textColor="#9E000000"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/optionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/default_text_view_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/argentina"
            android:textColor="#9E000000"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/optionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/default_text_view_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/brazil"
            android:textColor="#9E000000"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/optionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/default_text_view_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/africa"
            android:textColor="#9E000000"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:background="@color/design_default_color_primary"/>


    </LinearLayout>

</ScrollView>